# applab-chatbot-assessment

./: .env.example  .gitignore  OpenAPI.yaml  README.md  pyproject.toml
dockers/: ChatBotServiceDockerfile  ChatbotUIDockerfile
src/: main.py
src/controllers/: BaseController.py  DataController.py  NLPController.py  ProcessController.py  __init__.py
src/helpers/: config.py  constants.py
src/models/enums/: ResponseEnums.py
src/routes/: data.py  nlp.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py  __init__.py
src/stores/llm/providers/: OpenAIProvider.py  __init__.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py  __init__.py
src/stores/vectordb/providers/: QdrantDBProvider.py  __init__.py
src/views/: __init__.py  app.py
