[tool.poetry]
name = "applab-chatbot-assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
aiofiles = "^24.1.0"
pydantic-settings = "^2.7.0"
python-multipart = "^0.0.20"
langchain-community = "^0.3.12"
pymupdf = "^1.25.1"
openai = "^1.58.1"
qdrant-client = "^1.12.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
